--- a/JAVA_ADVANCED_2016/pom.xml
+++ b/JAVA_ADVANCED_2016/pom.xml
@@ -25,6 +25,12 @@
     </plugins>
   </build>
   
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
+  
+  
   <dependencies>
   
   <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
