--- a/JAVA_ADVANCED_2016/.classpath
+++ b/JAVA_ADVANCED_2016/.classpath
@@ -7,18 +7,18 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="Homework">
+	<classpathentry excluding="Homework_Tests/" kind="src" path="Homework">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="Others"/>
-	<classpathentry excluding="Courses/|src/|Homework/|Others/" kind="src" path=""/>
+	<classpathentry excluding="Courses/|src/|Homework/|Others/|Homework/Homework_Tests/" kind="src" path=""/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
