--- a/JAVA_ADVANCED_2016/pom.xml
+++ b/JAVA_ADVANCED_2016/pom.xml
@@ -48,6 +48,12 @@
 </dependency>
 
 
+<!-- https://mvnrepository.com/artifact/tk.yaxin/xexcel -->
+<dependency>
+    <groupId>tk.yaxin</groupId>
+    <artifactId>xexcel</artifactId>
+    <version>0.0.1-Releases</version>
+</dependency>
 
   
   
